fix: responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,13 @@
 body {
     font-family: 'Inter', sans-serif;
     margin: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .wrapper {
-    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,7 +31,7 @@ body {
     background-color: var(--primary-color);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -109,7 +112,7 @@ input[type=number]::-webkit-outer-spin-button {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: column;
     background-color: var(--secondary-color);
 }
@@ -136,4 +139,15 @@ p {
     font-size: 14px;
 }
 
-
+@media (max-width: 430px) {
+    h1{
+        font-size: 20px;
+    }
+    h3 {
+        font-size: 18px;
+    }
+    .result-wrap {
+        margin-bottom: 14px;
+        margin-top: 6px;
+    }
+}
